--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/InterfazFTP
 excludes=
+file.reference.commons-net-3.11.1-sources.jar=C:\\Users\\oriol\\Downloads\\commons-net-3.11.1-bin\\commons-net-3.11.1\\commons-net-3.11.1-sources.jar
+file.reference.commons-net-3.11.1.jar=C:\\Users\\oriol\\Downloads\\commons-net-3.11.1-bin\\commons-net-3.11.1\\commons-net-3.11.1.jar
+file.reference.commons-net-examples-3.11.1.jar=C:\\Users\\oriol\\Downloads\\commons-net-3.11.1-bin\\commons-net-3.11.1\\commons-net-examples-3.11.1.jar
+file.reference.Downloads-commons-net-3.11.1-bin=C:\\Users\\oriol\\Downloads\\commons-net-3.11.1-bin
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Downloads-commons-net-3.11.1-bin}:\
+    ${file.reference.commons-net-3.11.1.jar}:\
+    ${file.reference.commons-net-3.11.1-sources.jar}:\
+    ${file.reference.commons-net-examples-3.11.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
