--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,29 @@ file.reference.commons-net-3.11.1-sources.jar=C:\\Users\\oriol\\Downloads\\commo
 file.reference.commons-net-3.11.1.jar=C:\\Users\\oriol\\Downloads\\commons-net-3.11.1-bin\\commons-net-3.11.1\\commons-net-3.11.1.jar
 file.reference.commons-net-examples-3.11.1.jar=C:\\Users\\oriol\\Downloads\\commons-net-3.11.1-bin\\commons-net-3.11.1\\commons-net-examples-3.11.1.jar
 file.reference.Downloads-commons-net-3.11.1-bin=C:\\Users\\oriol\\Downloads\\commons-net-3.11.1-bin
+file.reference.javafx-swt.jar=C:\\Users\\oriol\\Downloads\\openjfx-23.0.1_windows-x64_bin-sdk\\javafx-sdk-23.0.1\\lib\\javafx-swt.jar
+file.reference.javafx.base.jar=C:\\Users\\oriol\\Downloads\\openjfx-23.0.1_windows-x64_bin-sdk\\javafx-sdk-23.0.1\\lib\\javafx.base.jar
+file.reference.javafx.controls.jar=C:\\Users\\oriol\\Downloads\\openjfx-23.0.1_windows-x64_bin-sdk\\javafx-sdk-23.0.1\\lib\\javafx.controls.jar
+file.reference.javafx.fxml.jar=C:\\Users\\oriol\\Downloads\\openjfx-23.0.1_windows-x64_bin-sdk\\javafx-sdk-23.0.1\\lib\\javafx.fxml.jar
+file.reference.javafx.graphics.jar=C:\\Users\\oriol\\Downloads\\openjfx-23.0.1_windows-x64_bin-sdk\\javafx-sdk-23.0.1\\lib\\javafx.graphics.jar
+file.reference.javafx.media.jar=C:\\Users\\oriol\\Downloads\\openjfx-23.0.1_windows-x64_bin-sdk\\javafx-sdk-23.0.1\\lib\\javafx.media.jar
+file.reference.javafx.swing.jar=C:\\Users\\oriol\\Downloads\\openjfx-23.0.1_windows-x64_bin-sdk\\javafx-sdk-23.0.1\\lib\\javafx.swing.jar
+file.reference.javafx.web.jar=C:\\Users\\oriol\\Downloads\\openjfx-23.0.1_windows-x64_bin-sdk\\javafx-sdk-23.0.1\\lib\\javafx.web.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Downloads-commons-net-3.11.1-bin}:\
     ${file.reference.commons-net-3.11.1.jar}:\
     ${file.reference.commons-net-3.11.1-sources.jar}:\
-    ${file.reference.commons-net-examples-3.11.1.jar}
+    ${file.reference.commons-net-examples-3.11.1.jar}:\
+    ${file.reference.javafx-swt.jar}:\
+    ${file.reference.javafx.base.jar}:\
+    ${file.reference.javafx.controls.jar}:\
+    ${file.reference.javafx.fxml.jar}:\
+    ${file.reference.javafx.graphics.jar}:\
+    ${file.reference.javafx.media.jar}:\
+    ${file.reference.javafx.swing.jar}:\
+    ${file.reference.javafx.web.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
